2004-01-06  Scott Dattalo  <scott@dattalo.com>
	* src/p16x5x.cc - patch from Rob Pearce that fixes the 16C5X tris writes.

2004-01-05  Scott Dattalo  <scott@dattalo.com>
	* src/14bit-tmrs.cc - tmr2 bug. PWM period was getting ANDed with 0xff.

2004-01-03  Scott Dattalo  <scott@dattalo.com>
	* Applied patch from Borut Razem - adds new files to Visual Studio project files.
	
2004-01-03  Scott Dattalo  <scott@dattalo.com>
	* Applied patch from Bradley McLean mailto:bradlist@bradm.net that adds support
	for the 18f1320.
	* Applied patch from Mike Durian that fixes an 18f SUB instruction.

2003-12-31  Scott Dattalo  <scott@dattalo.com>
	* Applied patch from Mike Durian. He's added several files to more reasonably
	group together portions of the simulator. In addition, he's added eeprom support
	to the 18f devices
	* src/eeprom.cc - new file to consolidate eeprom related stuff
	* src/intcon.cc - new file to consolidate variations in intcon registers
	* src/pie.cc - new file for pie register
	* src/intcon.h 
	* src/pir.h 
	* src/pic-instructions - fixed bug in 18f banking
	* src/16x5x.h - 16c54 register memory size was wrong
	* gui/gui_stopwatch.cc - added a check to make sure there's a processor
	* gui/gui_src*.cc - removed reference to cpu->pc->get_value()
	
2003-12-28  Scott Dattalo  <scott@dattalo.com>
	* another patch from Borut Razem:
	* cli/input.cc:
	    - added function get_dir_delim(), which searches for both /
	      and \ delimiters on WIN32 systems.
	    - fixed bug in gpsim_read(): logic for deallocating input_buf
	      was moved out of 'if (chars_left > 0)' block.
	    - some code cleaning, some compiler warnings fixed
	* cli/input.h:
	    - added declarations of exit_gpsim() and get_dir_delim()
	* gpsim/main.cc:
	    - removed declaration of exit_gpsim(), now included in cli/input.h
	* src/14bit-registers.cc:
	    - deallocation of name_str1 is already done in ~Register().
	* cod.cc:
	    - included cli/input.h for declaration of get_dir_delim()